[project]
name = "entity-resolution"
version = "0.1.0"
description = ""
authors = [
    {name = "sara-kelemen",email = "skk264@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "fuzzy (>=1.2.2,<2.0.0)",
    "jarowinkler (>=2.0.1,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
